tests/ui/quoted_non_string.stderr
error[E0277]: the trait bound `i32: AsRef<str>` is not satisfied
 --> tests/ui/quoted_non_string.rs:8:24
  |
8 |     assert_serialize::<Quoted<i32>>();
  |                        ^^^^^^^^^^^ the trait `AsRef<str>` is not implemented for `i32`
  |
help: the trait `Serialize` is implemented for `Quoted<T>`
 --> src/ser/wrapper_impls.rs
  |
  | impl<T: AsRef<str>> Serialize for Quoted<T> {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: required for `Quoted<i32>` to implement `Serialize`
note: required by a bound in `assert_serialize`
 --> tests/ui/quoted_non_string.rs:4:24
  |
4 | fn assert_serialize<T: Serialize>() {}
  |                        ^^^^^^^^^ required by this bound in `assert_serialize`

error[E0277]: the trait bound `f64: AsRef<str>` is not satisfied
 --> tests/ui/quoted_non_string.rs:9:24
  |
9 |     assert_serialize::<Quoted<f64>>();
  |                        ^^^^^^^^^^^ the trait `AsRef<str>` is not implemented for `f64`
  |
help: the trait `Serialize` is implemented for `Quoted<T>`
 --> src/ser/wrapper_impls.rs
  |
  | impl<T: AsRef<str>> Serialize for Quoted<T> {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: required for `Quoted<f64>` to implement `Serialize`
note: required by a bound in `assert_serialize`
 --> tests/ui/quoted_non_string.rs:4:24
  |
4 | fn assert_serialize<T: Serialize>() {}
  |                        ^^^^^^^^^ required by this bound in `assert_serialize`

error[E0277]: the trait bound `Vec<std::string::String>: AsRef<str>` is not satisfied
  --> tests/ui/quoted_non_string.rs:10:24
   |
10 |     assert_serialize::<Quoted<Vec<String>>>();
   |                        ^^^^^^^^^^^^^^^^^^^ the trait `AsRef<str>` is not implemented for `Vec<std::string::String>`
   |
help: `Vec<T, A>` implements trait `AsRef<T>`
  --> $RUST/alloc/src/vec/mod.rs
   |
   | impl<T, A: Allocator> AsRef<Vec<T, A>> for Vec<T, A> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `AsRef<Vec<T, A>>`
...
   | impl<T, A: Allocator> AsRef<[T]> for Vec<T, A> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `AsRef<[T]>`
   = note: required for `Quoted<Vec<std::string::String>>` to implement `Serialize`
note: required by a bound in `assert_serialize`
  --> tests/ui/quoted_non_string.rs:4:24
   |
 4 | fn assert_serialize<T: Serialize>() {}
   |                        ^^^^^^^^^ required by this bound in `assert_serialize`

error[E0277]: the trait bound `i32: AsRef<str>` is not satisfied
  --> tests/ui/quoted_non_string.rs:11:26
   |
11 |     assert_deserialize::<Quoted<i32>>();
   |                          ^^^^^^^^^^^ the trait `AsRef<str>` is not implemented for `i32`
   |
help: the trait `Deserialize<'_>` is implemented for `Quoted<T>`
  --> src/wrappers.rs
   |
   | / impl<'de, T> Deserialize<'de> for Quoted<T>
   | | where
   | |     T: Deserialize<'de> + AsRef<str>,
   | |_____________________________________^
   = note: required for `Quoted<i32>` to implement `Deserialize<'_>`
note: required by a bound in `assert_deserialize`
  --> tests/ui/quoted_non_string.rs:5:31
   |
 5 | fn assert_deserialize<'de, T: Deserialize<'de>>() {}
   |                               ^^^^^^^^^^^^^^^^ required by this bound in `assert_deserialize`
